updated team profile.html

--- a/output/team.html
+++ b/output/team.html
@@ -12,15 +12,19 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Team Profile Generator</a>
         </div>
       </nav>
 
       <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header">Engineer</div>
         <div class="card-body">
-          <h5 class="card-title">Chris Hemsworth</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Veronica Lim</h5>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">E-mail: veron_yan@yahoo.com.sg</li>
+            <li class="list-group-item">GitHub: Veron-star</li>
+          </ul>
         </div>
       </div>
 
@@ -28,15 +32,19 @@
         <div class="card-header">Manager</div>
         <div class="card-body">
           <h5 class="card-title">Johnny Depp</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <li class="list-group-item">ID: 2</li>
+          <li class="list-group-item">E-mail: Johnny.D@tpg.com</li>
+          <li class="list-group-item">Office Number: 08 9696-8011</li>
         </div>
       </div>
 
       <div class="card bg-light mb-3" style="max-width: 18rem;">
         <div class="card-header">Intern</div>
         <div class="card-body">
-          <h5 class="card-title">Veronica Lim</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Chris Hemsworth</h5>
+          <li class="list-group-item">ID: 3</li>
+          <li class="list-group-item">E-mail: Chrish@gmail.com</li>
+          <li class="list-group-item">School: Universati of Western Australia</li>
         </div>
       </div>
     
