--- a/output/team.html
+++ b/output/team.html
@@ -34,7 +34,7 @@
           <h5 class="card-title">Johnny Depp</h5>
           <li class="list-group-item">ID: 2</li>
           <li class="list-group-item">E-mail: Johnny.D@tpg.com</li>
-          <li class="list-group-item">Office Number: 08 9696-8011</li>
+          <li class="list-group-item">Office Number: 96968011</li>
         </div>
       </div>
 
@@ -44,7 +44,7 @@
           <h5 class="card-title">Chris Hemsworth</h5>
           <li class="list-group-item">ID: 3</li>
           <li class="list-group-item">E-mail: Chrish@gmail.com</li>
-          <li class="list-group-item">School: Universati of Western Australia</li>
+          <li class="list-group-item">School: UWA</li>
         </div>
       </div>
     
