test node app.js

--- a/output/team.html
+++ b/output/team.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+    <html lang="en">
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Profile</title>
@@ -8,45 +8,42 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-</head>
-<body>
+    </head>
+    <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">Team Profile Generator</a>
         </div>
       </nav>
 
-      <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-        <div class="card-header">Engineer</div>
-        <div class="card-body">
-          <h5 class="card-title">Veronica Lim</h5>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">E-mail: veron_yan@yahoo.com.sg</li>
-            <li class="list-group-item">GitHub: Veron-star</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-        <div class="card-header">Manager</div>
-        <div class="card-body">
-          <h5 class="card-title">Johnny Depp</h5>
-          <li class="list-group-item">ID: 2</li>
-          <li class="list-group-item">E-mail: Johnny.D@tpg.com</li>
-          <li class="list-group-item">Office Number: 96968011</li>
-        </div>
-      </div>
-
-      <div class="card bg-light mb-3" style="max-width: 18rem;">
-        <div class="card-header">Intern</div>
-        <div class="card-body">
-          <h5 class="card-title">Chris Hemsworth</h5>
-          <li class="list-group-item">ID: 3</li>
-          <li class="list-group-item">E-mail: Chrish@gmail.com</li>
-          <li class="list-group-item">School: UWA</li>
-        </div>
-      </div>
-    
+      <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;"></div><div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+            <div class="card-header">Engineer</div>
+            <div class="card-body">
+              <h5 class="card-title">alice</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 1</li>
+                <li class="list-group-item">E-mail: test@test.com</li>
+                <li class="list-group-item">GitHub: Veron-star</li>
+              </ul>
+            </div>
+          </div><div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+            <div class="card-header">Manager</div>
+            <div class="card-body">
+              <h5 class="card-title">chris</h5>
+              <li class="list-group-item">ID: 2</li>
+              <li class="list-group-item">E-mail: test@test.com</li>
+              <li class="list-group-item">Office Number: 96968011</li>
+            </div>
+          </div><div class="card bg-light mb-3" style="max-width: 18rem;">
+            <div class="card-header">Intern</div>
+            <div class="card-body">
+              <h5 class="card-title">veron</h5>
+              <li class="list-group-item">ID: 3</li>
+              <li class="list-group-item">E-mail: veron_yan@yahoo.com.sg</li>
+              <li class="list-group-item">School: UWA</li>
+            </div>
+          </div></div>
+    </div>
+  
 </body>
 </html>
