--- a/output/team.html
+++ b/output/team.html
@@ -19,7 +19,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;"></div><div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
             <div class="card-header">Engineer</div>
             <div class="card-body">
-              <h5 class="card-title">alice</h5>
+              <h5 class="card-title">Alice</h5>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: 1</li>
                 <li class="list-group-item">E-mail: test@test.com</li>
@@ -29,7 +29,7 @@
           </div><div class="card text-white bg-info mb-3" style="max-width: 18rem;">
             <div class="card-header">Manager</div>
             <div class="card-body">
-              <h5 class="card-title">chris</h5>
+              <h5 class="card-title">John</h5>
               <li class="list-group-item">ID: 2</li>
               <li class="list-group-item">E-mail: test@test.com</li>
               <li class="list-group-item">Office Number: 96968011</li>
@@ -37,9 +37,9 @@
           </div><div class="card bg-light mb-3" style="max-width: 18rem;">
             <div class="card-header">Intern</div>
             <div class="card-body">
-              <h5 class="card-title">veron</h5>
+              <h5 class="card-title">chris</h5>
               <li class="list-group-item">ID: 3</li>
-              <li class="list-group-item">E-mail: veron_yan@yahoo.com.sg</li>
+              <li class="list-group-item">E-mail: test@test.com</li>
               <li class="list-group-item">School: UWA</li>
             </div>
           </div></div>
