npm test run passed

--- a/output/team.html
+++ b/output/team.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Profile</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">Team Profile Generator</a>
-        </div>
-      </nav>
+<html lang="en">
 
-      <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;"></div><div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-            <div class="card-header">Engineer</div>
-            <div class="card-body">
-              <h5 class="card-title">Alice</h5>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item">E-mail: test@test.com</li>
-                <li class="list-group-item">GitHub: Veron-star</li>
-              </ul>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>My Team</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c502137733.js"></script>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 jumbotron mb-3 team-heading">
+                <h1 class="text-center">My Team</h1>
             </div>
-          </div><div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-            <div class="card-header">Manager</div>
-            <div class="card-body">
-              <h5 class="card-title">John</h5>
-              <li class="list-group-item">ID: 2</li>
-              <li class="list-group-item">E-mail: test@test.com</li>
-              <li class="list-group-item">Office Number: 96968011</li>
-            </div>
-          </div><div class="card bg-light mb-3" style="max-width: 18rem;">
-            <div class="card-header">Intern</div>
-            <div class="card-body">
-              <h5 class="card-title">chris</h5>
-              <li class="list-group-item">ID: 3</li>
-              <li class="list-group-item">E-mail: test@test.com</li>
-              <li class="list-group-item">School: UWA</li>
-            </div>
-          </div></div>
+        </div>
     </div>
-  
+    <div class="container">
+        <div class="row">
+            <div class="team-area col-12 d-flex justify-content-center">
+                <div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">bob</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 66</li>
+            <li class="list-group-item">Email: <a href="mailto:bob@test.com">bob@test.com</a></li>
+            <li class="list-group-item">Office number: 96968011</li>
+        </ul>
+    </div>
+</div>
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
