run team profile app.js

--- a/output/team.html
+++ b/output/team.html
@@ -15,61 +15,57 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 team-heading" style="background-color: khaki; color: lightgrey;">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">Team
-            </div>
-        </div>
-    </div>
-
-    <div class="card employee-card">
-      <div class="card-header">
-          <h2 class="card-title">Bob Dylan</h2>
-          <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-      </div>
-      <div class="card-body">
-          <ul class="list-group">
-              <li class="list-group-item">ID: 1</li>
-              <li class="list-group-item">Email: <a href="mailto:bob.d@test.com">bob.d@test.com</a></li>
-              <li class="list-group-item">Office number: 96968011</li>
-          </ul>
-      </div>
-  </div>
-
-  <div class="card employee-card">
+            <div class="team-area col-12 d-flex justify-content-center">
+                <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Veronica Lim</h2>
+        <h2 class="card-title">ygku</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: kjhgkj</li>
+            <li class="list-group-item">Email: <a href="mailto:kjhglj">kjhglj</a></li>
+            <li class="list-group-item">Office number: kjhh</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">hgkj</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:veron_yan@yahoo.com.sg">veron_yan@yahoo.com.sg</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/Veron-star" target="_blank" rel="noopener noreferrer">Veron-star</a></li>
+            <li class="list-group-item">ID: jh</li>
+            <li class="list-group-item">Email: <a href="mailto:kjhg">kjhg</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jh" target="_blank" rel="noopener noreferrer">jh</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">uhluk</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: lkjh</li>
+            <li class="list-group-item">Email: <a href="mailto:khg">khg</a></li>
+            <li class="list-group-item">School: hjl</li>
         </ul>
     </div>
 </div>
 
-<div class="card employee-card">
-  <div class="card-header">
-      <h2 class="card-title">Han Solo</h2>
-      <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-  </div>
-  <div class="card-body">
-      <ul class="list-group">
-          <li class="list-group-item">ID: 3</li>
-          <li class="list-group-item">Email: <a href="mailto:hansolo@starwars.com">hansolo@starwars.com</a></li>
-          <li class="list-group-item">School: UWA</li>
-      </ul>
-  </div>
-</div>
-
-
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
